4/4.1/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ping-pong-ing
spec:
  rules:
  - http:
      paths:
      - path: "/pingpong"
        pathType: Prefix
        backend:
          service:
            name: ping-pong-svc
            port:
              number: 2346
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: log-svc
            port:
              number: 2345
